fixed spacing on sloganheader

--- a/styles/main.css
+++ b/styles/main.css
@@ -74,6 +74,7 @@ body{
 #sloganHeader{
     text-align: center;
     border-bottom: 10px;
+    margin-top: 120px;
 }
 
 #sloganSub{
